--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "tuti": "node index.js"
   },
   "dependencies": {
-    "commander": "^9.2.0"
+    "commander": "^9.2.0",
+    "dotenv": "^16.0.1",
+    "eslint": "^8.16.0"
   }
 }
