--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "author": "Tomas Sobota",
   "license": "MIT",
+  "type": "module",
   "engines": {
     "node": ">=18.0.0"
   },
   "scripts": {
-    "tuti": "node index.js"
+    "tuti": "node --no-warnings index.js"
   },
   "dependencies": {
     "commander": "^9.2.0",
     "dotenv": "^16.0.1",
     "eslint": "^8.16.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@babel/eslint-parser": "^7.18.2"
   }
 }
