--- a/utilities/notes/package.json
+++ b/utilities/notes/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/Smeky/tuti/utilities/notes",
   "author": "Tomas Sobota",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "notes": "node index.js"
   },
