--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
   },
   "parser": "@babel/eslint-parser",
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "requireConfigFile": false,
   },
   "rules": {
     "comma-dangle": ["warn", "always-multiline"],
