--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
 TUTI_NOTION_APIKEY=""
 TUTI_NOTES_STANDUP_PAGEID="4c1beb383f4c43dfb736d77acd62dc42"
 TUTI_NOTES_STANDUP_CHROME_PROFILE="Profile 1"
+TUTI_NOTES_IDEAS_URL="https://www.notion.so/Utility-ideas-1cce851c74b34cd1b3602c84d94475e6"
+TUTI_NOTES_IDEAS_CHROME_PROFILE="Default"
